--- a/src/index.pug
+++ b/src/index.pug
@@ -37,7 +37,7 @@ include template/head.pug
           </div>
         </div>
       </section>
-      <section class="postface section">
+      <section class="postface anim-section">
         <div class="container-fluid">
           <div class="row no-gutters postface__holder">
             <div class="col-sm-6 col-ml-3 mb-4 mb-ml-0">
@@ -92,7 +92,7 @@ include template/head.pug
           </div>
         </div>
       </section>
-      <section class="reasons section">
+      <section class="reasons anim-section">
         <div class="container-fluid">
           <div class="reasons__holder">
             <div class="row h-100">
@@ -127,7 +127,7 @@ include template/head.pug
           <div class="reasons__shadow"></div>
         </div>
       </section>
-      <section class="which section">
+      <section class="which anim-section">
         <div class="container-fluid">
           <div class="which__holder">
             <div class="title which__title">
@@ -250,7 +250,7 @@ include template/head.pug
           </div>
         </div>
       </section>
-      <section class="section difficulties">
+      <section class="anim-section difficulties">
         <div class="container-fluid">
           <div class="difficulties__holder">
             <div class="title difficulties__title">
@@ -321,7 +321,7 @@ include template/head.pug
           </div>
         </div>
       </section>
-      <section class="section steps">
+      <section class="anim-section steps">
         <div class="container-fluid">
           <div class="steps__wrap">
             <div class="steps__holder skewed">
@@ -381,7 +381,7 @@ include template/head.pug
           </div>
         </div>
       </section>
-      <section class="section visa-type">
+      <section class="visa-type">
         <div class="container-fluid">
           <div class="title visa-type__title">
             <h2>Оформляем 5 видов виз  от 1 до 3 дней с гарантией выдачи</h2>
@@ -403,10 +403,10 @@ include template/head.pug
               <a href="#vt5" class="" data-toggle="tab">Виза невесты /&nbsp;жениха</a>
             </li>
           </ul>
-          <div class="tab-content visa-type__holder">
+          <div class="tab-content anim-section visa-type__holder">
             <div id="vt1" class="tab-pane fade active show">
               <div class="row">
-                <div class="col-6">
+                <div class="col-md-6 mb-4 mb-md-0">
                   <div class="visa-type__img">
                     <div class="travel-img">
                       <img src="img/visa-type/travel/1.png" alt="" class="travel-img__item">
@@ -416,7 +416,7 @@ include template/head.pug
                     </div>
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <div class="visa-type__content">
                     <h3>Туристическая виза</h3>
                     <div class="visa-type__text">
@@ -441,12 +441,12 @@ include template/head.pug
             </div>
             <div id="vt2" class="tab-pane fade">
               <div class="row">
-                <div class="col-6">
+                <div class="col-md-6 mb-4 mb-md-0">
                   <div class="visa-type__img">
 
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <div class="visa-type__content">
                     <h3>Гостевая  виза</h3>
                     <div class="visa-type__text">
@@ -471,12 +471,12 @@ include template/head.pug
             </div>
             <div id="vt3" class="tab-pane fade">
               <div class="row">
-                <div class="col-6">
+                <div class="col-md-6 mb-4 mb-md-0">
                   <div class="visa-type__img">
 
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <div class="visa-type__content">
                     <h3>Бизнес виза</h3>
                     <div class="visa-type__text">
@@ -501,12 +501,12 @@ include template/head.pug
             </div>
             <div id="vt4" class="tab-pane fade">
               <div class="row">
-                <div class="col-6">
+                <div class="col-md-6 mb-4 mb-md-0">
                   <div class="visa-type__img">
 
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <div class="visa-type__content">
                     <h3>Студенческая  виза</h3>
                     <div class="visa-type__text">
@@ -531,12 +531,12 @@ include template/head.pug
             </div>
             <div id="vt5" class="tab-pane fade">
               <div class="row">
-                <div class="col-6">
+                <div class="col-md-6 mb-4 mb-md-0">
                   <div class="visa-type__img">
 
                   </div>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <div class="visa-type__content">
                     <h3>Виза невесты / жениха</h3>
                     <div class="visa-type__text">
@@ -559,6 +559,95 @@ include template/head.pug
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <section class="anim-section calc">
+        <div class="container-fluid">
+          <div class="calc__wrap skewed">
+            <div class="skewed__top"></div>
+            <div class="skewed__holder">
+              <div class="skewed__content">
+                <form class="calc__holder">
+                  <div class="title">
+                    <h2>Рассчитать стоимость <br> за 2 минуты <span>Заполните форму и узнайте нужный  список документов и стоимость за 2 минуты</span></h2>
+                  </div>
+                  <div class="calc__inputs">
+                    <div class="row">
+                      <div class="col-sm-6 col-md-4 mb-3">
+                        <input type="text" class="input" placeholder="Страна">
+                      </div>
+                      <div class="col-sm-6 col-md-4 mb-3">
+                        <input type="text" class="input" placeholder="Цель поездки">
+                      </div>
+                      <div class="col-md-4 mb-3">
+                        <div class="input pick">
+                          <div class="pick__btn">Кол-во человек</div>
+                          <div class="pick__content">
+                            <div class="pick__content-holder">
+                              <div class="amount">
+                               <div class="amount__caption">Взрослые</div>
+                                <div class="amount__holder">
+                                  <div class="amount__btn amount__btn_minus">-</div>
+                                  <input type="number" class="amount__number" value="0">
+                                  <div class="amount__btn amount__btn_plus">+</div>
+                                </div>
+                              </div>
+                              <div class="amount">
+                                <div class="amount__caption">Дети</div>
+                                <div class="amount__holder">
+                                  <div class="amount__btn amount__btn_minus">-</div>
+                                  <input type="number" class="amount__number" value="0">
+                                  <div class="amount__btn amount__btn_plus">+</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="calc__list">
+                    <div class="row justify-content-center justify-content-md-between align-items-center">
+                      <div class="col-md-6 order-2 order-md-1">
+                        <div class="caption calc__caption">
+                          <div class="caption__holder">
+                            <div class="caption__top"></div>
+                            <div class="caption__content">
+                              <b>Последний расчет</b>
+                              <ul>
+                                <li>Алина - 2 вз. Шинген в Испанию 7800₽</li>
+                                <li>Алина - 2 вз. Шинген в Испанию 7800₽</li>
+                                <li>Алина - 2 вз. Шинген в Испанию 7800₽</li>
+                                <li>Алина - 2 вз. Шинген в Испанию 7800₽</li>
+                                <li>Алина - 2 вз. Шинген в Испанию 7800₽</li>
+                                <li>Алина - 2 вз. Шинген в Испанию 7800₽</li>
+                                <li>Алина - 2 вз. Шинген в Испанию 7800₽</li>
+                                <li>Алина - 2 вз. Шинген в Испанию 7800₽</li>
+                              </ul>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-md-6 text-center text-md-right order-1 order-md-2 mb-5 mb-md-0">
+                        <div class="calc__btn">
+                          <button class="btn">
+                            <div class="btn__holder">
+                              <div class="btn__text">Получить <br> расчет</div>
+                              <div class="btn__ico">
+                                +icon('click')
+                              </div>
+                            </div>
+                          </button>
+                          <div class="calc__docs"><a href="#">Получить список документов</a></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="skewed__shadow"></div>
           </div>
         </div>
       </section>
