--- a/src/style/part/icons.scss
+++ b/src/style/part/icons.scss
@@ -3,3 +3,9 @@
 	vertical-align: middle;
 }
 
+.icon-click {
+	fill: #fff;
+	width: 30px;
+	height: 30px;
+	filter: drop-shadow( 0 1px 0 #675fd5);
+}
