--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -162,7 +162,7 @@ h3 {
   }
 }
 .input {
-  line-height: calcFluidSize(60, 80);
+  line-height: 80px;
   padding: 0 37px;
   background: #dce1fa;
   border-radius: 40px;
@@ -355,7 +355,7 @@ button {
   flex: 1 0 auto;
 }
 .container-fluid {
-  max-width: 1150px;
+  max-width: 1200px;
 }
 .header {
   position: absolute;
@@ -438,6 +438,86 @@ button {
   display: inline-block;
   vertical-align: top;
 }
+.amount {
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+  &__caption {
+    flex: 0 0 110px;
+  }
+  &__holder {
+    display: flex;
+    align-items: center;
+    line-height: 15px;
+  }
+  &__btn {
+    font-weight: 600;
+    text-align: center;
+    width: 15px;
+    height: 15px;
+    background: #8d88fa;
+    color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+  &__number {
+    padding: 0 8px;
+    pointer-events:none;
+    background: transparent;
+    border: none;
+    width: 30px;
+    text-align: center;
+    &::-webkit-outer-spin-button,
+    &::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
+}
+.pick {
+  position: relative;
+  z-index: 2;
+  transition: border-top-left-radius .2s, border-top-right-radius .2s, border-bottom-left-radius .5s, border-bottom-right-radius .5s;
+  &__btn {
+    cursor: pointer;
+    transition: color .3s;
+    white-space: nowrap;
+  }
+  &__content {
+    max-height: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    background: #dce1fa;
+    border-radius: 0 0 15px 15px;
+    line-height: 30px;
+    transition: all .1s cubic-bezier(0, 1, 0, 1);
+    padding: 0 37px;
+    @include bp($md) {
+      padding: 0 15px;
+    }
+    @include bp($ml) {
+      padding: 0 37px;
+    }
+    &-holder {
+      padding-bottom: 15px;
+    }
+
+  }
+  &:hover {
+    border-radius: 15px 15px 0 0;
+    transition: border-top-left-radius .2s, border-top-right-radius .2s;
+  }
+  &:hover &__content {
+    max-height: 999px;
+    transition: all .5s ease-in-out;
+  }
+  &:hover &__btn {
+    color: rgba(88, 89, 110, .7);
+  }
+}
 .checked-list {
   padding-left: 0;
   list-style: none;
@@ -507,6 +587,16 @@ button {
     @include bp($sm) {
       padding: 35px 48px 80px;
     }
+    &:before {
+      content: '';
+      position: absolute;
+      height: 70%;
+      bottom: 0;
+      background: linear-gradient(0deg, rgba(249,246,242,1) 0%, rgba(249,246,242,0) 100%);
+      left: 0;
+      right: 0;
+      border-radius: 0 0 20px 20px;
+    }
   }
   &__shadow {
     position: absolute;
@@ -529,6 +619,7 @@ button {
   }
   &_footered {
     padding-bottom: 0;
+    border-radius: 0;
   }
   &_footered {
     padding-bottom: 30px;
@@ -589,9 +680,11 @@ button {
     padding: 22px 43px;
     display: inline-block;
     width: 100%;
+    border-radius: 0 0 10px 10px;
   }
   &_footered &__holder {
     padding-bottom: 0;
+    border-radius: 0;
   }
   &__top {
     position: absolute;
@@ -616,6 +709,23 @@ button {
     &:after {
       right: -30px;
       border-radius: 10px 10px 0 0;
+    }
+  }
+  &__content {
+    b {
+      display: block;
+      text-align: center;
+      font-size: 20px;
+      line-height: 28px;
+      margin-bottom: 15px;
+      padding-top: 10px;
+    }
+    ul {
+      list-style: none;
+      padding-left: 0;
+      li {
+        margin-bottom: 15px;
+      }
     }
   }
   &__bottom {
@@ -1014,7 +1124,7 @@ button {
       z-index: 1;
     }
   }
-  &.active &__img {
+  &.anim-section.active &__img {
     transform: rotate(28deg);
     opacity: 1;
   }
@@ -1109,9 +1219,6 @@ button {
   padding-top: 30px;
   z-index: 1;
   overflow: hidden;
-  /*@include bp($lg) {
-    overflow: visible;
-  }*/
   h2 {
     text-align: left;
   }
@@ -1233,7 +1340,7 @@ button {
       }
     }
   }
-  &.active &__title {
+  &.anim-section.active &__title {
     &:before {
       transform: rotate(-16deg);
       opacity: 1;
@@ -1562,10 +1669,11 @@ button {
     }
     i {
       font-style: normal;
-      margin: 0 20px 15px 0;
+      margin: 0 0 15px 0;
       display: block;
       @include bp($ml) {
         display: inline;
+        margin: 0 20px 15px 0;
       }
     }
     span {
@@ -1630,6 +1738,8 @@ button {
   }
 }
 .visa-type {
+  padding-bottom: 80px;
+  overflow: hidden;
   &__title {
     h2 {
       max-width: 572px;
@@ -1645,7 +1755,7 @@ button {
   }
   &__img {
     position: relative;
-    z-index: 1;
+    z-index: -1;
     height: 100%;
     display: flex;
     align-items: flex-end;
@@ -1677,20 +1787,35 @@ button {
   }
   &__btn {
     text-align: center;
-    .icon-click {
-      fill: #fff;
-      width: 30px;
-      height: 30px;
-      filter: drop-shadow( 0 1px 0 #675fd5);
+    width: 100%;
+    max-width: 380px;
+    margin: 0 auto;
+    .btn {
+      width: 100%;
+      &__ico {
+        width: calcFluidSize(42, 62);
+        height: calcFluidSize(42, 62);
+        line-height: calcFluidSize(42, 62);
+      }
+      .icon-click {
+        width: calcFluidSize(22, 30);
+        height: calcFluidSize(22, 30);
+      }
     }
   }
 }
 .travel-img {
-  margin: 0 auto;
+  margin: 70px auto 0;
   width: 56.33333%;
   position: relative;
+  max-width: 200px;
+  @include bp($md) {
+    max-width: 9999px;
+    margin: 0 auto;
+  }
   &__item {
     position: absolute;
+    transition: .5s;
     &:first-of-type {
       position: relative;
       max-width: 100%;
@@ -1701,6 +1826,7 @@ button {
       bottom: 25.95833%;
       opacity: .2;
       z-index: -1;
+      transition: .8s;
     }
     &:nth-of-type(3) {
       width: 105.6213%;
@@ -1711,6 +1837,99 @@ button {
       width: 35.79882%;
       right: 90.23669%;
       bottom: 88.75%;
+    }
+  }
+}
+.anim-section.active .travel-img {
+  &__item {
+    &:nth-of-type(2) {
+      left: -86.09467%;
+      opacity: 1;
+    }
+    &:nth-of-type(3) {
+      transform: rotate(5deg);
+    }
+    &:nth-of-type(4) {
+      transform: rotate(25deg);
+    }
+  }
+}
+.calc {
+  .skewed__top {
+    background-image: url(../img/skewed2.png);
+  }
+  .skewed__holder {
+    background-image: url(../img/skewed2.png);
+    background-repeat: repeat-y;
+    &:before {
+      height: 100%;
+      @include bp($md) {
+        height: 70%;
+      }
+    }
+  }
+  .title {
+    h2 {
+      max-width: 555px;
+    }
+  }
+  &__holder {
+    max-width: 1105px;
+    margin: 0 auto;
+  }
+  &__btn {
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    max-width: 380px;
+    .btn {
+      margin-bottom: 22px;
+      width: 100%;
+      &__holder {
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+      &__ico {
+        width: calcFluidSize(36, 62);
+        height: calcFluidSize(36, 62);
+        line-height: calcFluidSize(36, 62);
+      }
+      .icon-click {
+        width: calcFluidSize(18, 30);
+        height: calcFluidSize(18, 30);
+      }
+    }
+  }
+  &__docs {
+    text-align: center;
+    a {
+      font-size: 15px;
+      line-height: 19px;
+      color: #59586e;
+      border-bottom: 1px dotted;
+    }
+  }
+  &__inputs {
+    margin-bottom: 46px;
+  }
+  &__list {
+    max-width: 945px;
+    margin: 0 auto;
+  }
+  &__caption {
+    .caption__content {
+      max-height: 230px;
+      overflow: hidden;
+      position: relative;
+      &:before {
+        content: '';
+        position: absolute;
+        height: 100px;
+        bottom: 0;
+        background: linear-gradient(0deg, rgba(255, 230, 140, 1) 0%, rgba(255, 230, 140, 0) 100%);
+        left: 0;
+        right: 0;
+      }
     }
   }
 }
