--- a/visavia/css/main.css
+++ b/visavia/css/main.css
@@ -4,6 +4,13 @@
   vertical-align: middle;
 }
 
+.icon-click {
+  fill: #fff;
+  width: 30px;
+  height: 30px;
+  filter: drop-shadow(0 1px 0 #675fd5);
+}
+
 @font-face {
   font-family: 'Montserrat';
   src: url("../fonts/Montserrat-Regular.eot");
@@ -195,7 +202,7 @@ h3 {
 }
 
 .input {
-  line-height: calc( 0.03012 * 100vmin + 43.13253px);
+  line-height: 80px;
   padding: 0 37px;
   background: #dce1fa;
   border-radius: 40px;
@@ -413,7 +420,7 @@ button {
 }
 
 .container-fluid {
-  max-width: 1150px;
+  max-width: 1200px;
 }
 
 .header {
@@ -504,6 +511,97 @@ button {
   vertical-align: top;
 }
 
+.amount {
+  margin-bottom: 10px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+}
+
+.amount__caption {
+  -ms-flex: 0 0 110px;
+      flex: 0 0 110px;
+}
+
+.amount__holder {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  line-height: 15px;
+}
+
+.amount__btn {
+  font-weight: 600;
+  text-align: center;
+  width: 15px;
+  height: 15px;
+  background: #8d88fa;
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.amount__number {
+  padding: 0 8px;
+  pointer-events: none;
+  background: transparent;
+  border: none;
+  width: 30px;
+  text-align: center;
+}
+
+.amount__number::-webkit-outer-spin-button,
+.amount__number::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.pick {
+  position: relative;
+  z-index: 2;
+  transition: border-top-left-radius .2s, border-top-right-radius .2s, border-bottom-left-radius .5s, border-bottom-right-radius .5s;
+}
+
+.pick__btn {
+  cursor: pointer;
+  transition: color .3s;
+  white-space: nowrap;
+}
+
+.pick__content {
+  max-height: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  background: #dce1fa;
+  border-radius: 0 0 15px 15px;
+  line-height: 30px;
+  transition: all 0.1s cubic-bezier(0, 1, 0, 1);
+  padding: 0 37px;
+}
+
+.pick__content-holder {
+  padding-bottom: 15px;
+}
+
+.pick:hover {
+  border-radius: 15px 15px 0 0;
+  transition: border-top-left-radius .2s, border-top-right-radius .2s;
+}
+
+.pick:hover .pick__content {
+  max-height: 999px;
+  transition: all .5s ease-in-out;
+}
+
+.pick:hover .pick__btn {
+  color: rgba(88, 89, 110, 0.7);
+}
+
 .checked-list {
   padding-left: 0;
   list-style: none;
@@ -575,6 +673,17 @@ button {
   min-height: 100px;
 }
 
+.skewed__holder:before {
+  content: '';
+  position: absolute;
+  height: 70%;
+  bottom: 0;
+  background: linear-gradient(0deg, #f9f6f2 0%, rgba(249, 246, 242, 0) 100%);
+  left: 0;
+  right: 0;
+  border-radius: 0 0 20px 20px;
+}
+
 .skewed__shadow {
   position: absolute;
   bottom: 0;
@@ -599,6 +708,7 @@ button {
 
 .caption_footered {
   padding-bottom: 0;
+  border-radius: 0;
 }
 
 .caption_footered {
@@ -645,10 +755,12 @@ button {
   padding: 22px 43px;
   display: inline-block;
   width: 100%;
+  border-radius: 0 0 10px 10px;
 }
 
 .caption_footered .caption__holder {
   padding-bottom: 0;
+  border-radius: 0;
 }
 
 .caption__top {
@@ -678,6 +790,24 @@ button {
 .caption__top:after {
   right: -30px;
   border-radius: 10px 10px 0 0;
+}
+
+.caption__content b {
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  line-height: 28px;
+  margin-bottom: 15px;
+  padding-top: 10px;
+}
+
+.caption__content ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.caption__content ul li {
+  margin-bottom: 15px;
 }
 
 .caption__bottom {
@@ -1005,7 +1135,7 @@ button {
   z-index: 1;
 }
 
-.postface.active .postface__img {
+.postface.anim-section.active .postface__img {
   transform: rotate(28deg);
   opacity: 1;
 }
@@ -1105,9 +1235,6 @@ button {
   padding-top: 30px;
   z-index: 1;
   overflow: hidden;
-  /*@include bp($lg) {
-    overflow: visible;
-  }*/
 }
 
 .reasons h2 {
@@ -1202,12 +1329,12 @@ button {
   transition: .5s;
 }
 
-.which.active .which__title:before {
+.which.anim-section.active .which__title:before {
   transform: rotate(-16deg);
   opacity: 1;
 }
 
-.which.active .which__title:after {
+.which.anim-section.active .which__title:after {
   transform: rotate(38deg);
   opacity: 1;
 }
@@ -1521,7 +1648,7 @@ button {
 
 .steps h2 i {
   font-style: normal;
-  margin: 0 20px 15px 0;
+  margin: 0 0 15px 0;
   display: block;
 }
 
@@ -1578,13 +1705,18 @@ button {
   text-align: left;
 }
 
+.visa-type {
+  padding-bottom: 80px;
+  overflow: hidden;
+}
+
 .visa-type__title h2 {
   max-width: 572px;
 }
 
 .visa-type__img {
   position: relative;
-  z-index: 1;
+  z-index: -1;
   height: 100%;
   display: -ms-flexbox;
   display: flex;
@@ -1623,23 +1755,36 @@ button {
 
 .visa-type__btn {
   text-align: center;
+  width: 100%;
+  max-width: 380px;
+  margin: 0 auto;
 }
 
-.visa-type__btn .icon-click {
-  fill: #fff;
-  width: 30px;
-  height: 30px;
-  filter: drop-shadow(0 1px 0 #675fd5);
+.visa-type__btn .btn {
+  width: 100%;
+}
+
+.visa-type__btn .btn__ico {
+  width: calc( 0.03012 * 100vmin + 25.13253px);
+  height: calc( 0.03012 * 100vmin + 25.13253px);
+  line-height: calc( 0.03012 * 100vmin + 25.13253px);
+}
+
+.visa-type__btn .btn .icon-click {
+  width: calc( 0.01205 * 100vmin + 15.25301px);
+  height: calc( 0.01205 * 100vmin + 15.25301px);
 }
 
 .travel-img {
-  margin: 0 auto;
+  margin: 70px auto 0;
   width: 56.33333%;
   position: relative;
+  max-width: 200px;
 }
 
 .travel-img__item {
   position: absolute;
+  transition: .5s;
 }
 
 .travel-img__item:first-of-type {
@@ -1653,6 +1798,7 @@ button {
   bottom: 25.95833%;
   opacity: .2;
   z-index: -1;
+  transition: .8s;
 }
 
 .travel-img__item:nth-of-type(3) {
@@ -1665,6 +1811,105 @@ button {
   width: 35.79882%;
   right: 90.23669%;
   bottom: 88.75%;
+}
+
+.anim-section.active .travel-img__item:nth-of-type(2) {
+  left: -86.09467%;
+  opacity: 1;
+}
+
+.anim-section.active .travel-img__item:nth-of-type(3) {
+  transform: rotate(5deg);
+}
+
+.anim-section.active .travel-img__item:nth-of-type(4) {
+  transform: rotate(25deg);
+}
+
+.calc .skewed__top {
+  background-image: url(../img/skewed2.png);
+}
+
+.calc .skewed__holder {
+  background-image: url(../img/skewed2.png);
+  background-repeat: repeat-y;
+}
+
+.calc .skewed__holder:before {
+  height: 100%;
+}
+
+.calc .title h2 {
+  max-width: 555px;
+}
+
+.calc__holder {
+  max-width: 1105px;
+  margin: 0 auto;
+}
+
+.calc__btn {
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+  max-width: 380px;
+}
+
+.calc__btn .btn {
+  margin-bottom: 22px;
+  width: 100%;
+}
+
+.calc__btn .btn__holder {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.calc__btn .btn__ico {
+  width: calc( 0.03916 * 100vmin + 14.07229px);
+  height: calc( 0.03916 * 100vmin + 14.07229px);
+  line-height: calc( 0.03916 * 100vmin + 14.07229px);
+}
+
+.calc__btn .btn .icon-click {
+  width: calc( 0.01807 * 100vmin + 7.87952px);
+  height: calc( 0.01807 * 100vmin + 7.87952px);
+}
+
+.calc__docs {
+  text-align: center;
+}
+
+.calc__docs a {
+  font-size: 15px;
+  line-height: 19px;
+  color: #59586e;
+  border-bottom: 1px dotted;
+}
+
+.calc__inputs {
+  margin-bottom: 46px;
+}
+
+.calc__list {
+  max-width: 945px;
+  margin: 0 auto;
+}
+
+.calc__caption .caption__content {
+  max-height: 230px;
+  overflow: hidden;
+  position: relative;
+}
+
+.calc__caption .caption__content:before {
+  content: '';
+  position: absolute;
+  height: 100px;
+  bottom: 0;
+  background: linear-gradient(0deg, #ffe68c 0%, rgba(255, 230, 140, 0) 100%);
+  left: 0;
+  right: 0;
 }
 
 .footer {
@@ -1808,6 +2053,10 @@ button {
     line-height: 24px;
   }
 
+  .pick__content {
+    padding: 0 15px;
+  }
+
   .caption__cloud {
     top: calc(-12vw);
     width: 55vw;
@@ -1865,6 +2114,15 @@ button {
     text-align: left;
     max-width: 9999px;
   }
+
+  .travel-img {
+    max-width: 9999px;
+    margin: 0 auto;
+  }
+
+  .calc .skewed__holder:before {
+    height: 70%;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -1876,6 +2134,10 @@ button {
     padding: 0 2%;
     -ms-flex: 1;
         flex: 1;
+  }
+
+  .pick__content {
+    padding: 0 37px;
   }
 
   .caption__cloud {
@@ -1927,6 +2189,7 @@ button {
 
   .steps h2 i {
     display: inline;
+    margin: 0 20px 15px 0;
   }
 
   .steps .consult-form .btn__text {
